[gd_scene load_steps=17 format=2]

[ext_resource path="res://effects/glow.png" type="Texture" id=1]
[ext_resource path="res://objects/stamina_bomb/stamina_bomb.gd" type="Script" id=2]
[ext_resource path="res://effects/glow_3.png" type="Texture" id=3]

[sub_resource type="SphereShape" id=1]
radius = 0.33

[sub_resource type="SphereShape" id=2]
radius = 3.0

[sub_resource type="SphereMesh" id=3]
radius = 0.25
height = 0.5
radial_segments = 8
rings = 4

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.028, 1 )
colors = PoolColorArray( 0.0338876, 0.0714286, 0.0273438, 1, 0.6, 3, 0.4, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 0.25
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
damping = 16.49
scale = 0.25
color_ramp = SubResource( 5 )

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=8]
material = SubResource( 7 )

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.5, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.122044, 0.203125, 0.10791, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 2
emission_box_extents = Vector3( 1.5, 1.5, 1.5 )
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
damping = 16.49
scale = 4.0
color_ramp = SubResource( 11 )

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 1 )

[sub_resource type="QuadMesh" id=14]
material = SubResource( 13 )

[node name="StaminaBomb" type="Spatial"]
script = ExtResource( 2 )

[node name="Collision" type="Area" parent="."]
monitorable = false
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="Collision"]
shape = SubResource( 1 )

[node name="Buff" type="Area" parent="."]
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Buff"]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
material/0 = null

[node name="Particles" type="Particles" parent="."]
emitting = false
amount = 32
lifetime = 0.75
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 8 )

[node name="Particles2" type="Particles" parent="."]
emitting = false
amount = 10
lifetime = 2.0
explosiveness = 0.41
process_material = SubResource( 12 )
draw_pass_1 = SubResource( 14 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true
[connection signal="body_entered" from="Collision" to="." method="_on_Collision_body_entered"]
[connection signal="body_entered" from="Buff" to="." method="_on_Buff_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
